--- a/css/index.css
+++ b/css/index.css
@@ -51,7 +51,7 @@ body{
 }
 
 .carousel img{
-    width: 100%;
+  
     height: 60vh;
 }
 
@@ -285,7 +285,7 @@ footer p { font-size:13px; color:#CCC; padding-bottom:0px; margin-bottom:8px;}
 	z-index: -1;
 	height: 100px;
 	background-attachment: fixed !important;
-    background-position: center center;
+    background-position: center ;
     background-repeat: no-repeat;
     background-size: cover;
 	
@@ -584,3 +584,4 @@ footer p { font-size:13px; color:#CCC; padding-bottom:0px; margin-bottom:8px;}
 	width:100%;
 	position:absolute;
 	}
+
