--- a/css/index.css
+++ b/css/index.css
@@ -585,3 +585,6 @@ footer p { font-size:13px; color:#CCC; padding-bottom:0px; margin-bottom:8px;}
 	position:absolute;
 	}
 
+.small-arms .pistols{
+	margin-bottom: 40px;
+}
